--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
                 <div class="number">67%</div>
                 <div class="name">JavaScript</div>
             </div>
+            <div class="box">
+                <svg>
+                    <circle class="scc" cx="70" cy="70" r="70"></circle>
+                    <circle cx="70" cy="70" r="70"></circle>
+                </svg>
+                <div class="number">74%</div>
+                <div class="name">MySQL</div>
+            </div>
         </div>
 
         
